tests/reference/asr-character_01-e8e453d.stderr
semantic error: The RHS character len must be known at compile time
 --> tests/warnings/character_01.f90:3:5
  |
3 |     character(len=1, kind=1), parameter :: c_null_char = "ball"
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
